--- a/client/package.json
+++ b/client/package.json
@@ -18,10 +18,13 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
+    "@types/react": "^18.3.12",
+    "@types/styled-components": "^5.1.34",
     "eslint": "^8.19.0",
     "eslint-config-next": "^12.2.2",
     "jest": "^28.1.2",
     "jest-environment-jsdom": "^28.1.3",
-    "json-graphql-server": "^2.3.1"
+    "json-graphql-server": "^2.3.1",
+    "typescript": "^5.6.3"
   }
 }
